--- a/UrnaEletronica.csproj
+++ b/UrnaEletronica.csproj
@@ -151,6 +151,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Layout\Prototipo\Layout.drawio" />
+    <Content Include="Content\Layout\Prototipo\Layout.drawio" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
